--- a/index.html
+++ b/index.html
@@ -39,25 +39,20 @@
     table{width:100%;border-collapse:collapse;border:1px solid var(--line);overflow:auto;background:#fff;border-radius:12px}
     th,td{padding:8px 10px;border-bottom:1px solid var(--line);text-align:left;vertical-align:top}
     th{color:#0f172a;font-weight:600;background:#f1f5f9;position:sticky;top:0}
-/* === 로고 + 제목 줄 === */
-:root{
-  --logo-size: 112px;                    /* ← 크기 조절: 56/64/72 등 원하시는 값 */
-  --ca-logo-file: url("클어 로고.png");  /* ← 파일 있으면 이걸 표시, 없어도 OK */
-}
 
-.brand{
-  display:flex; align-items:center; gap:14px;
-  margin:0 0 6px;
-}
-.brand h1{ margin:0; font-size:22px; }
-
-/* 엑박 방지: 파일 → 내장 SVG 폴백(텍스트형) */
-.brand-logo{
-  width:var(--logo-size); height:var(--logo-size); flex:0 0 var(--logo-size);
-  border:none; border-radius:12px; background-color:transparent;
-  background-image:
-    var(--ca-logo-file),
-    url("data:image/svg+xml;utf8,\
+    /* === 로고 + 제목 줄 === */
+    :root{
+      --logo-size: 112px;
+      --ca-logo-file: url("클어 로고.png");
+    }
+    .brand{ display:flex; align-items:center; gap:14px; margin:0 0 6px; }
+    .brand h1{ margin:0; font-size:22px; }
+    .brand-logo{
+      width:var(--logo-size); height:var(--logo-size); flex:0 0 var(--logo-size);
+      border:none; border-radius:12px; background-color:transparent;
+      background-image:
+        var(--ca-logo-file),
+        url("data:image/svg+xml;utf8,\
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 90 50'>\
  <rect width='90' height='50' rx='10' fill='white'/>\
  <circle cx='66' cy='10' r='8' fill='%236b8bd6'/>\
@@ -65,115 +60,34 @@
  <text x='8' y='24' font-size='18' font-family='-apple-system,Segoe UI,Roboto,Arial,Noto Sans KR,sans-serif' font-weight='800' fill='%230f172a'>Class</text>\
  <text x='8' y='42' font-size='18' font-family='-apple-system,Segoe UI,Roboto,Arial,Noto Sans KR,sans-serif' font-weight='800' fill='%230f172a'>Around</text>\
 </svg>");
-  background-repeat:no-repeat,no-repeat;
-  background-position:center,center;
-  background-size:contain,contain;
-  /* 살짝 세로정렬 보정이 필요하면 아래 주석 해제
-  transform: translateY(1px);
-  */
-}
-/* 둥글둥글한 로고 텍스트 스타일 (페이지 최하단에 추가) */
-.brand-logo .logo-text{
-  font-family: 'Nunito','Arial Rounded MT','SF Pro Rounded',
-               'Quicksand','Pretendard','Noto Sans KR',sans-serif;
-  font-weight: 900;          /* 통통하게 */
-  letter-spacing: -0.2px;    /* 자간 살짝 압축 */
-  font-size: 18px;           /* 로고 내부 글자 크기 */
-  fill: #0f172a;             /* 글자 색 */
-  -webkit-font-smoothing: antialiased;
-  text-rendering: geometricPrecision;
-}
-.brand-logo .logo-text{
-  paint-order: stroke fill;
-  stroke: #0f172a;         /* 글자색과 동일 */
-  stroke-width: .9px;      /* 0.6~1.4px에서 취향대로 조절 */
-}
+      background-repeat:no-repeat,no-repeat;
+      background-position:center,center;
+      background-size:contain,contain;
+    }
+    .brand-logo .logo-text{
+      font-family:'Nunito','Arial Rounded MT','SF Pro Rounded','Quicksand','Pretendard','Noto Sans KR',sans-serif;
+      font-weight:900; letter-spacing:-0.2px; font-size:18px; fill:#0f172a;
+      -webkit-font-smoothing:antialiased; text-rendering:geometricPrecision;
+      paint-order:stroke fill; stroke:#0f172a; stroke-width:.9px;
+    }
 
-
-
-/* ===== 관리자 UI: 예전 스샷 스타일로 맞춤 ===== */
-
-/* 드로어 크기/여백 */
-.admin-drawer{
-  width: 520px;                 /* 필요하면 480~560px로 조절 */
-  padding: 14px 16px 18px;
-}
-
-/* 카드(박스) 톤/모서리/테두리 */
-.admin-drawer .card{
-  background:#fff;              /* ← 예전처럼 흰 바탕 */
-  border:1px solid var(--line);
-  border-radius:16px;
-  padding:14px 16px;
-  box-shadow:none;              /* 그림자 제거 */
-  margin:0 0 12px;
-}
-
-/* 섹션 타이틀/라벨 톤 */
-.admin-drawer h4{ margin:0 0 8px; font-weight:700; }
-.admin-drawer label{
-  color:#64748b;                /* 예전 회색 라벨 */
-  font-size:13px;
-  margin:6px 0 4px;
-}
-
-/* 인풋 크기/라운드 */
-.admin-drawer input{
-  height:42px;
-  border:1px solid var(--line);
-  border-radius:12px;
-  padding:10px 12px;
-}
-
-/* 버튼(연결 추가/전체 삭제/삭제) */
-.admin-drawer .btn{
-  height:36px;
-  padding:0 12px;
-  border-radius:12px;
-}
-.admin-drawer .btn:hover{
-  border-color:var(--accent-strong);
-  box-shadow:0 0 0 3px rgba(96,165,250,.18);
-}
-
-/* 등록 테이블 톤 */
-#admList{ border-collapse:collapse; width:100%; }
-#admList th{
-  background:#f1f5f9;           /* 헤더 옅은 회색 */
-  font-weight:600;
-  padding:10px;
-}
-#admList td{
-  padding:10px;
-  border-top:1px solid var(--line);
-  font-size:13px;
-  vertical-align:middle;
-}
-#admList tr:hover td{ background:#f9fafb; }  /* 행 hover */
-
-/* 테이블 안 ‘삭제’ 버튼을 둥글고 작게 */
-#admList .btn{
-  height:34px; padding:0 12px; border-radius:12px;
-}
-
-/* 하단 메타(“총 N개 연결 …”) 색/여백 */
-#admMeta{ color:#94a3b8; margin-top:8px; }
-/* 관리자 입력칸 가로폭 통일 */
-.admin-drawer input[type="text"],
-.admin-drawer input:not([type]),
-.admin-drawer select,
-.admin-drawer textarea{
-  width: 100%;
-  box-sizing: border-box;
-}
-:root{ --admin-h: 44px; }     /* 42~48px 선호; 취향대로 조정 */
-.admin-drawer input,
-.admin-drawer .btn{
-  height: var(--admin-h);
-  line-height: calc(var(--admin-h) - 2px);
-  border-radius: 12px;
-}
-
+    /* ===== 관리자 UI(톤) ===== */
+    .admin-drawer{ width:520px; padding:14px 16px 18px; }
+    .admin-drawer .card{ background:#fff; border:1px solid var(--line); border-radius:16px; padding:14px 16px; box-shadow:none; margin:0 0 12px; }
+    .admin-drawer h4{ margin:0 0 8px; font-weight:700; }
+    .admin-drawer label{ color:#64748b; font-size:13px; margin:6px 0 4px; }
+    .admin-drawer input{ height:42px; border:1px solid var(--line); border-radius:12px; padding:10px 12px; }
+    .admin-drawer .btn{ height:36px; padding:0 12px; border-radius:12px; }
+    .admin-drawer .btn:hover{ border-color:var(--accent-strong); box-shadow:0 0 0 3px rgba(96,165,250,.18); }
+    #admList{ border-collapse:collapse; width:100%; }
+    #admList th{ background:#f1f5f9; font-weight:600; padding:10px; }
+    #admList td{ padding:10px; border-top:1px solid var(--line); font-size:13px; vertical-align:middle; }
+    #admList tr:hover td{ background:#f9fafb; }
+    #admList .btn{ height:34px; padding:0 12px; border-radius:12px; }
+    #admMeta{ color:#94a3b8; margin-top:8px; }
+    .admin-drawer input[type="text"], .admin-drawer input:not([type]), .admin-drawer select, .admin-drawer textarea{ width:100%; box-sizing:border-box; }
+    :root{ --admin-h:44px; }
+    .admin-drawer input, .admin-drawer .btn{ height:var(--admin-h); line-height:calc(var(--admin-h) - 2px); border-radius:12px; }
 
     /* ===== panels ===== */
     .panels{display:grid;gap:16px}
@@ -220,17 +134,16 @@
 
   <div class="wrap">
 <header class="brand">
+  <!-- (참고) 아래 inline SVG는 기존 코드 유지 -->
   <svg class="brand-logo" viewBox="0 0 90 50" role="img" aria-label="ClassAround">
     <rect width="90" height="50" rx="10" fill="white"/>
-<svg class="brand-logo" viewBox="0 0 90 50" role="img" aria-label="ClassAround">
-  <defs>
-    <filter id="halo" x="-50%" y="-50%" width="200%" height="200%">
-      <feGaussianBlur stdDeviation="1.2"/>
-    </filter>
-  </defs>
-
-  <!-- 배경 -->
-  <rect width="90" height="50" rx="10" fill="white"/>
+  <svg class="brand-logo" viewBox="0 0 90 50" role="img" aria-label="ClassAround">
+    <defs>
+      <filter id="halo" x="-50%" y="-50%" width="200%" height="200%">
+        <feGaussianBlur stdDeviation="1.2"/>
+      </filter>
+    </defs>
+    <rect width="90" height="50" rx="10" fill="white"/>
     <circle cx="66" cy="10" r="8" fill="#6b8bd6"/>
     <circle cx="80" cy="18" r="5" fill="#ef4444"/>
     <text x="8" y="24" class="logo-text">Class</text>
@@ -238,8 +151,6 @@
   </svg>
   <h1>클래스어라운드 카카오톡 입장자 체크봇</h1>
 </header>
-
-
 
     <!-- 로그인(공용) -->
     <div class="card">
@@ -421,6 +332,22 @@ function isPaid(v){
   return false;
 }
 
+/* === [추가] 전화 열 자동 탐지 & 빠른 ID 계산 === */
+// 헤더에서 '전화' or 'phone' 열 자동 탐지 (없으면 null)
+async function detectPhoneColLetter(spreadsheetId, sheetTitle){
+  const head = await getRange(spreadsheetId, `${sheetTitle}!A1:Z1`);
+  const headers = (head.values && head.values[0]) || [];
+  const idx = headers.findIndex(h => /전화|phone/i.test(String(h||'')));
+  if (idx < 0) return null;
+  return String.fromCharCode('A'.charCodeAt(0)+idx); // 0->A, 1->B ...
+}
+// ID 비교(숫자는 숫자 우선 비교, 아니면 자연 정렬) → 더 "빠른" ID 반환
+function earlierId(a,b){
+  const na = Number(a), nb = Number(b);
+  if (!isNaN(na) && !isNaN(nb)) return na <= nb ? a : b;
+  return String(a).localeCompare(String(b), undefined, {numeric:true}) <= 0 ? a : b;
+}
+
 /* ===== 전역 오류 UI ===== */
 (function(){
   const pushErr = (msg, src, line, col, err)=> {
@@ -600,7 +527,7 @@ async function runMain(sfx){
     const packs=loadPacks(); const pack=packs.find(x=>x.id===packSel.value); if(!pack) throw new Error('연결 정보를 찾을 수 없습니다.');
     const sheetId=pack.sheetId; const readCol=pack.readCol||'C';
 
-    // 파싱
+    // 1) 카톡 파싱 → 현재 최종 상태
     const chatText = await readText(chatFile);
     const {events, joinedCount, leftCount} = parseChat(chatText);
 
@@ -631,39 +558,72 @@ async function runMain(sfx){
       }
     }
 
-    // 명단 로드
-    const readNames = await getRange(sheetId, `${readSheet}!${readCol}${READ_START_ROW}:${readCol}`);
-    const readRows = readNames.values || [];
-    const rosterNames = [];
-    const rosterNamesN = [];
-    const rosterSetN = new Set();
-    for(let i=0;i<readRows.length;i++){
-      const nm = String(readRows[i]?.[0] ?? '').trim();
-      if(!nm) continue;
-      const nN = normalizeName(nm);
-      rosterNames.push(nm);
-      rosterNamesN.push(nN);
-      rosterSetN.add(nN);
+    /* 2) 읽기 시트: A열(ID) + 이름열(readCol) + 전화열(헤더 자동탐지) */
+    const idRange   = await getRange(sheetId, `${readSheet}!A${READ_START_ROW}:A`);
+    const nameRange = await getRange(sheetId, `${readSheet}!${readCol}${READ_START_ROW}:${readCol}`);
+    const phoneCol  = await detectPhoneColLetter(sheetId, readSheet);
+    const phoneRange = phoneCol
+      ? await getRange(sheetId, `${readSheet}!${phoneCol}${READ_START_ROW}:${phoneCol}`)
+      : {values: []};
+
+    const ids   = idRange.values   || [];
+    const names = nameRange.values || [];
+    const phones= phoneRange.values|| [];
+
+    // 로스터 구성
+    const roster = [];
+    const R = Math.max(ids.length, names.length, phones.length);
+    for(let i=0;i<R;i++){
+      const id    = (ids[i]   && ids[i][0])    || '';
+      const name  = (names[i] && names[i][0])  || '';
+      const phone = (phones[i]&& phones[i][0]) || '';
+      if(!String(name).trim()) continue;
+      roster.push({
+        id,
+        name: String(name).trim(),
+        nameN: normalizeName(name),
+        phone: String(phone||'').trim(),
+        phoneDigits: String(phone||'').replace(/[^\d]/g,'')
+      });
     }
+
+    // 같은 [이름N|전화숫자] 키에서 "가장 빠른" ID 계산
+    const earliestIdByKey = new Map();
+    for(const r of roster){
+      const key = r.nameN + '|' + (r.phoneDigits || '');
+      if(!earliestIdByKey.has(key)) earliestIdByKey.set(key, r.id);
+      else earliestIdByKey.set(key, earlierId(earliestIdByKey.get(key), r.id));
+    }
+
+    // 입장 대상: 이름 기준(번호만 없는 입장도 고려)
+    const rosterSetN = new Set(roster.map(r => r.nameN));
     const isAttendingNameN = (nN)=>{
       const set = activeDigitsByName.get(nN);
       return (set && set.size>0) || nameOnlyJoin.has(nN);
     };
     const attendingSetN = new Set([...rosterSetN].filter(nN => isAttendingNameN(nN)));
 
+    // 리포트: 이름/전화/상태/매칭/비고/roster_id(A)
     const report=[];
-    for(let i=0;i<rosterNames.length;i++){
-      const nm = rosterNames[i];
-      const nN = rosterNamesN[i];
-      if(attendingSetN.has(nN)){
-        const set = activeDigitsByName.get(nN) || new Set();
-        const any4 = [...set].find(x=>x!==NAME_ONLY_SENTINEL) || '';
-        report.push([nm,'입장', any4 ? `${nm}/${any4}` : nm, any4?'':'(번호없음)']);
-      }else{
-        report.push([nm,'미입장','','']);
-      }
+    for(const r of roster){
+      const inAtt = attendingSetN.has(r.nameN);
+      const set = activeDigitsByName.get(r.nameN) || new Set();
+      const any4FromJoin = [...set].find(x=>x && x!==NAME_ONLY_SENTINEL) || '';
+      const rosterPhone  = r.phoneDigits ? r.phone : '';
+      const key = r.nameN + '|' + (r.phoneDigits || '');
+      const rid = earliestIdByKey.get(key) || r.id || ''; // A열 ID
+
+      report.push([
+        r.name,                             // name
+        rosterPhone ? r.phone : '',         // phone
+        inAtt ? '입장' : '미입장',            // status
+        any4FromJoin ? `${r.name}/${any4FromJoin}` : r.name, // matched_id
+        any4FromJoin ? '' : '(번호없음)',     // notes
+        rid                                  // roster_id(A)
+      ]);
     }
 
+    // 명단 외 입장자
     const extra=[];
     [...activeDigitsByName.entries()].sort(([a],[b])=>a.localeCompare(b,'ko')).forEach(([nN,set])=>{
       if(!rosterSetN.has(nN)){
@@ -673,6 +633,7 @@ async function runMain(sfx){
       }
     });
 
+    // 최종 퇴장자
     const leavers=[];
     [...leftFinalDigitsByName.entries()].sort(([a],[b])=>a.localeCompare(b,'ko')).forEach(([nN,set])=>{
       const activeSet = activeDigitsByName.get(nN);
@@ -684,7 +645,7 @@ async function runMain(sfx){
       });
     });
 
-    // 공유 시트 갱신
+    // 3) 공유 시트 갱신
     const writeRange = `${writeSheet}!D${WRITE_START_ROW}:S`;
     const wdata = await getRange(sheetId, writeRange);
     const rows = wdata.values || [];
@@ -734,6 +695,7 @@ async function runMain(sfx){
       await batchUpdateValues(sheetId, updates);
     }
 
+    // 상단 배지
     const pills=byPanel('pills',sfx); if(pills){ pills.innerHTML='';
       const mk=(t,c)=>{ const s=document.createElement('span'); s.className='pill '+c; s.textContent=t; return s; };
       pills.appendChild(mk(`입장로그 join ${joinedCount}`,'ok'));
@@ -742,6 +704,7 @@ async function runMain(sfx){
       if(previewOnly) pills.appendChild(mk('체크만','warn'));
     }
 
+    // 표 렌더
     const resultsEl = byPanel("results", sfx);
     function resTbl(title, headers, rows){
       if(!resultsEl) return;
@@ -753,7 +716,7 @@ async function runMain(sfx){
       (rows||[]).forEach(r=>{ const tr=document.createElement('tr'); (r||[]).forEach(c=>{ const td=document.createElement('td'); td.textContent=(c==null?'':String(c)); tr.appendChild(td); }); tb.appendChild(tr); });
       t.appendChild(tb); wrap.appendChild(t); resultsEl.appendChild(wrap);
     }
-    resTbl('내 명단 기준 상태(읽기 시트)', ['name','status','matched_id','notes'], report);
+    resTbl('내 명단 기준 상태(읽기 시트)', ['name','phone','status','matched_id','notes','roster_id(A)'], report);
     resTbl('명단 외 입장자', ['name/last4 or (번호없음)'], extra);
     resTbl('퇴장자 명단(최종)', ['name/last4 or (번호없음)'], leavers);
     resTbl('미확인 목록(공유 시트 동명이인/번호 문제)', ['name','reason'], unresolved);
