--- a/index.html
+++ b/index.html
@@ -706,6 +706,7 @@ function runDemo(sfx){
     '이정백/4444님이 입장하셨습니다',   // 명단 외
     '신조차모독하는천재이원철님이 입장하셨습니다',   // 명단 외
     '세계제일의규리당장찬양님이 나갔습니다.'          // 최종 퇴장 처리
+    '송지현예쁘다님을 내보냈습니다. .'          // 최종 퇴장 처리
   ].join('\n');
   const {events, joinedCount, leftCount} = parseChat(chatText);
 
