--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@ function runDemo(sfx){
     const isActive = set.size>0;
     const any4 = [...set].find(x=>x!==NAME_ONLY_SENTINEL) || '';
     report.push([
-      String(r.id),           // roster_id(A)
+      String(r.id),           // no
       r.name,
       r.phone,
       isActive ? '입장' : '미입장',
@@ -831,7 +831,7 @@ function runDemo(sfx){
     t.appendChild(tb); wrap.appendChild(t); resultsEl.appendChild(wrap);
   }
 
-  resTbl('명단기준 입장자(데모)', ['roster_id(A)','name','phone','status','matched_id','notes'], report);
+  resTbl('명단기준 입장자(데모)', ['no','name','phone','status','matched_id','notes'], report);
   resTbl('명단 외 입장자(데모)', ['name/last4 or (번호없음)'], extra);
   resTbl('퇴장자 명단(데모)', ['name/last4 or (번호없음)'], leavers);
   resTbl('미확인 목록(데모)', ['name','reason'], unresolved);
@@ -886,6 +886,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 </script>
 </body>
 </html>
+
 
 
 
