--- a/index.html
+++ b/index.html
@@ -703,9 +703,11 @@ function runDemo(sfx){
     '방예진/9999님이 입장했습니다',
     '임규리 1771님이 들어왔습니다',
     '김혜영/7890님이 입장하셨습니다',
-    '이정백/4444님이 입장하셨습니다',   // 명단 외
+    '진종범/2514님이 입장하셨습니다',   // 명단 외
+    '매드드라이버김지현님이 입장하셨습니다',   // 명단 외
     '신조차모독하는천재이원철님이 입장하셨습니다',   // 명단 외
-    '세계제일의규리당장찬양님이 나갔습니다.'          // 최종 퇴장 처리
+    '세계제일의규리당장찬양님이 나갔습니다.',          // 최종 퇴장 처리
+    '송지현예쁘다님을 내보냈습니다.'          // 최종 퇴장 처리
   ].join('\n');
   const {events, joinedCount, leftCount} = parseChat(chatText);
 
