--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="row" style="margin-top:10px">
             <label class="row" style="gap:6px;align-items:center">
               <input id="previewOnlyA" type="checkbox" />
-              <span class="hint">체크용</span>
+              <span class="hint">열람용</span>
             </label>
             <button id="runBtnA" class="btn acc" type="button">실행</button>
             <button id="demoBtnA" class="btn" type="button">데모</button>
@@ -209,7 +209,7 @@
           <div class="row" style="margin-top:10px">
             <label class="row" style="gap:6px;align-items:center">
               <input id="previewOnlyB" type="checkbox" />
-              <span class="hint">체크용</span>
+              <span class="hint">열람용</span>
             </label>
             <button id="runBtnB" class="btn acc" type="button">실행</button>
             <button id="demoBtnB" class="btn" type="button">데모</button>
